--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -120,8 +120,9 @@
                 
         .recaptcha_img {
             
-            transform: scale(1.5);
+            transform: scale(4.4);
             transform-origin: 0 0;
+            border:none
     
         }
 
