--- a/src/components/NavigationEvents/NavigationEvents.scss
+++ b/src/components/NavigationEvents/NavigationEvents.scss
@@ -241,17 +241,10 @@
         .eventBig1 {
             display: flex;
             flex-direction: column;
-            align-content: center;
-            // justify-content: center;
-            
-            // flex-shrink: 1;
-            // border-radius: 10px;
-            width: 100%;
-            // background-image: url('/src/images/0_CardSmall_Test.png');
-            // background-size: auto;
-            // background-position: center;
-            // background-repeat: no-repeat;
+            align-content: center;            
+            width: 100%;            
             height: 33vh;
+            margin-bottom: 28%;
 
             //MITAD DE ARRIBA
             .bigUpContainer {
@@ -261,8 +254,7 @@
                 height: 60%;
                 width: 100%;
                 background-size: cover;
-                background-position: center;
-                background-image: url('/src/images/0_CardSmall_TEST.png');
+                background-position: center;                
                 background-repeat: no-repeat;
                 border-top-left-radius: 10px;
                 border-top-right-radius: 10px;
