--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -155,7 +155,7 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 20px;
-        color: $creammde;
+        color: $whitemde;
       }
     }
   }
