minor changes style

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -114,9 +114,8 @@
 
     .recaptcha {
         position: absolute;
-        display: flex;
-        justify-content: center;
-        margin-top: 87%;
+        margin-left: 6%;
+        margin-top: 90%;
                 
         .recaptcha_img {
             
