--- a/src/components/NotificationScroll/NotificationsScroll.scss
+++ b/src/components/NotificationScroll/NotificationsScroll.scss
@@ -1,7 +1,12 @@
 @import "../../colors";
 
 .scroll_notificationContainer {
-  margin-top:38%;
-
-  
+  margin-top:32%;
+  background-color: $backcolormde;
+  margin-bottom: 17%;
+  height: 100vh;
+  width: 100%;
+  .notification_card{
+    width: 100%;
+  }
 }
