--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -35,6 +35,7 @@
     .receiverUsername {
       display: flex;
       flex-direction: column;
+      width: 250px;
       p {
         margin: 0px 0px 0px 10px;
         color: $creammde;
@@ -47,6 +48,10 @@
         font-size: 12px;
         font-weight: 400;
         text-align: left;
+      }
+    }
+    .blockContactDiv {
+      img {
       }
     }
   }
@@ -113,6 +118,7 @@
       justify-content: center;
       align-items: center;
       span {
+        margin-top: 10px;
         display: inline-flex;
         align-items: center;
         height: 18px;
