--- a/src/components/ChatList/ChatList.scss
+++ b/src/components/ChatList/ChatList.scss
@@ -38,19 +38,28 @@
     font-size: 15px;
     line-height: 19px;
   }
-  .single {
+  .single.true {
     background-color: $darkbluemde;
     color: $creammde;
   }
-  .group {
+  .single.false {
     background-color: $creammde;
     color: $darkbluemde;
+  }
+  .group.false {
+    background-color: $creammde;
+    color: $darkbluemde;
+  }
+  .group.false {
+    background-color: $darkbluemde;
+    color: $creammde;
   }
 }
 
 .chatListDiv {
   margin-bottom: 76px;
   background-color: $backcolormde;
+  min-height: 549px;
   .chatItem {
     display: flex;
     margin: 10px 0px;
@@ -59,10 +68,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 20%;
+      width: 100px;
       .imageContainer {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
         border-radius: 50%;
         overflow: hidden;
         display: flex;
@@ -75,7 +84,7 @@
       }
     }
     .chatInfo {
-      margin-left: 20px;
+      margin-left: 5px;
       width: 304px;
       .namePlusDate {
         display: flex;
@@ -98,7 +107,7 @@
         text-align: left;
       }
       .firstRowOfMessage {
-        color: red;
+        color: $graymde;
       }
     }
   }
